--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-web') {
 		exclude module: 'spring-boot-starter-tomcat'
 	}
+	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	implementation 'org.springframework.boot:spring-boot-starter-log4j2'
 //	implementation 'org.springframework.boot:spring-boot-starter-undertow'
 	runtimeOnly 'org.springframework.boot:spring-boot-starter-actuator'
