--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -52,6 +52,9 @@ dependencies {
 	}
 
 	implementation("io.springfox:springfox-boot-starter:3.0.0")
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.security:spring-security-test'
+	testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
 
 test {
