added passw encoding & constructors to obj & configured h2 database

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -55,6 +55,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.security:spring-security-test'
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
+	compile("com.h2database:h2:1.4.191")
 }
 
 test {
