--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -56,6 +56,9 @@ dependencies {
 	implementation 'org.springframework.security:spring-security-test'
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	compile("com.h2database:h2:1.4.191")
+	compile("io.springfox:springfox-swagger-ui")
+	compile("io.springfox:springfox-swagger2")
+	compileOnly("javax.servlet:javax.servlet-api")
 }
 
 test {
