--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -11,8 +11,14 @@
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.5",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.1.3",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.2"
   },
